[gd_scene load_steps=5 format=2]

[ext_resource path="res://Bullet/M24Bullet.gd" type="Script" id=1]
[ext_resource path="res://Assets/bullet.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 2.0
height = 18.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 1.0

[node name="M24Bullet" type="KinematicBody2D" groups=["Bullet", "bullet"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
scale = Vector2( 0.04, 0.04 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
